tests/ui/diagnostic_namespace/on_unimplemented/feature-gate-diagnostic_on_unimplemented.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `diagnostic`
  --> $DIR/feature-gate-diagnostic_on_unimplemented.rs:4:3
   |
LL | #[diagnostic::on_unimplemented(message = "Foo")]
   |   ^^^^^^^^^^ use of undeclared crate or module `diagnostic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
